--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,12 +47,12 @@ body {
   display: flex;  
   flex-direction: column;
   justify-content:center;
- margin: 0 auto;
+  margin: 0 auto;
   width: 500px;
   height:80%;
 }
 h1 {
-  margin: 4px 0;
+/*   margin: 4px 0; */
   font-weight: 100;
   font-size: 40px;
   text-align: center;
@@ -105,6 +105,9 @@ button {
 }
 label {
   font-size: 12px;
+  color: #000000;
+  background-color: aqua;
+  text-shadow: #fd115c;
 }
 form {
   height: 30%;
